--- a/Resources/views/AuditFormField/index.html.twig
+++ b/Resources/views/AuditFormField/index.html.twig
@@ -25,7 +25,7 @@
                     </td>
                     <td>[ <a href="{{ path( 'wgauditformfield_view', { 'id': field.id } ) }}">view</a> ]</td>
                     <td>[ <a href="{{ path( 'wgauditformfield_edit', { 'id': field.id } ) }}">edit</a> ]</td>
-                    <td>[ <a href="{{ path( 'wgauditformfield_remove', { 'id': field.id } ) }}">delete</a> ]</td>
+                    <td>[ <a href="{{ path( 'wgauditformfield_delete', { 'id': field.id } ) }}">delete</a> ]</td>
                 </tr>
                 <tr>
                     <td class="wgaudit-label">Description: </td>
