--- a/Resources/views/Audit/add.html.twig
+++ b/Resources/views/Audit/add.html.twig
@@ -3,66 +3,69 @@
 {% extends 'WGAuditBundle::base.html.twig' %}
 
 {% block body %}
-<h2>Create new audit</h2>
-
-<form id="audit" method="POST" action="">
-
-    <table>
-        <tr>
-            <th>S.No.</th>
-            <th>Field</th>
-            <th>Score</th>
-            <th>Weight</th>
-            <th>Reviewer's Comment</th>
-        </tr>
-        {% set counter = 1 %}
-        {% for section in audit.auditform.sections %}
-            <tr class="wgaudit-section">
-                <td  class="wgaudit-field" colspan="5">Section {{ loop.index }}: {{ section.title }}</td>
-            </tr>
-            {% for field in section.fields %}
+<div class="container">
+    <h3>Create new audit</h3>
+    <form id="audit" method="POST" action="">
+        <table class="table table-condensed table-hover">
+            <thead>
                 <tr>
-                    <td>{{ counter }}</td>
-                    <td class="wgaudit-field">{{ field.title }}</td>
-                    <td>
-                        {% set form = craue_cloneForm(scoreform) %}
-                        <select name="score[{{ field.id }}][value]" class="wgaudit-score-selector" data-field-id="{{ field.id }}">
-                        {% for score, label in field.scores %}
-                            <option value="{{ score }}" data-tooltip="{{ label }}" class="tooltip">
-                            {{ score }}
-                            </option>
-                        {% endfor %}
-                    </td>
-                    <td class="wgaudit-field-weight">{% if field.fatal == true %}
-                            Involve Mgr
-                        {% else %}
-                            {{ field.weight }}
-                        {% endif %}
-                    </td>
-                    <td class="wgaudit-field"><textarea name="score[{{ field.id }}][comment]"></textarea></td>
+                    <th>S.No.</th>
+                    <th>Field</th>
+                    <th>Score</th>
+                    <th>Weight</th>
+                    <th>Reviewer's Comment</th>
                 </tr>
-                {% set counter = counter + 1 %}
+            </thead>
+            <tbody>
+            {% set counter = 1 %}
+            {% for section in audit.auditform.sections %}
+                <tr>
+                    <td colspan="5">Section {{ loop.index }}: {{ section.title }}</td>
+                </tr>
+                {% for field in section.fields %}
+                    <tr>
+                        <td>{{ counter }}</td>
+                        <td>{{ field.title }}</td>
+                        <td>
+                            {% set form = craue_cloneForm(scoreform) %}
+                            <select class="span1" name="score[{{ field.id }}][value]" data-field-id="{{ field.id }}">
+                            {% for score, label in field.scores %}
+                                <option value="{{ score }}" data-tooltip="{{ label }}" class="tooltip">
+                                {{ score }}
+                                </option>
+                            {% endfor %}
+                        </td>
+                        <td>{% if field.fatal == true %}
+                                Involve Mgr
+                            {% else %}
+                                {{ field.weight }}
+                            {% endif %}
+                        </td>
+                        <td><textarea class="span4" name="score[{{ field.id }}][comment]"></textarea></td>
+                    </tr>
+                    {% set counter = counter + 1 %}
+                {% endfor %}
+                    <tr>
+                    <td colspan="2" style="text-align: right">Section's Score</td>
+                    <td>{{ attribute( audit, 'resultForSection', [ section ] ) }}</td>
+                    <td>{{ section.weight }}</td>
+                    <td class="bar"></td>
+                </tr>
             {% endfor %}
-                <tr class="wgaudit-section-row">
-                <td class="wgaudit-score-final" colspan="2">Section's Score</td>
-                <td class="wgaudit-section-score">{{ attribute( audit, 'resultForSection', [ section ] ) }}</td>
-                <td class="wgaudit-section-weight">{{ section.weight }}</td>
-                <td class="bar"></td>
-            </tr>
-        {% endfor %}
-        <tr class="wgaudit-section">
-            <td class="wgaudit-score-final" colspan="2">Final Score</td>
-            <td class="wgaudit-form-score"></td>
-            <td class="wgaudit-form-weight">{{ audit.totalWeight }}</td>
-            <td></td>
-        </tr>
-    </table>
+                <tr>
+                    <td colspan="2" style="text-align: right">Final Score</td>
+                    <td></td>
+                    <td>{{ audit.totalWeight }}</td>
+                    <td></td>
+                </tr>
+            </tbody>
+        </table>
 
-    <div>
-        <input type="submit" value="save" />
-    </div>
-</form>
-
+        <div>
+            <input type="submit" value="save" class="btn"/>
+        </div>
+    </form>
+</div>
 <script type="text/javascript">
     var routePatternCalculateScore = '{{ routePatternCalculateScore }}';
     $(function()
