--- a/Resources/views/AuditForm/view.html.twig
+++ b/Resources/views/AuditForm/view.html.twig
@@ -3,46 +3,61 @@
 {% extends 'WGAuditBundle::base.html.twig' %}
 
 {% block body %}
+<div class="container">
+    <h3>Audit Form</h3>
 
-    <h2>Form: {{ form.title }}</h2>
-    <div>Is the form active: {% if  form.active == 1 %}yes{% else %}No{% endif %}</div>
-    <div>Description: {{ form.description }}</div>
-
-    <table id="audit">
+    <table class="table table-condensed">
         <thead>
             <tr>
                 <th>Title</th>
-                <th>Weight</th>
+                <th>Active</th>
                 <th>Description</th>
-                <th>score</th>
-            </tr>        
+            </tr>
         </thead>
         <tbody>
-            {% for section in form.sections %}
-                <tr class="wgaudit-section">
-                    <td colspan=2>Section {{section.id}}: {{ section.title }}</td>
-                    <td colspan=2>{{ section.description }}</td>
-                </tr>
-                {% for field in section.fields %}
-                <tr>
-                    <td>{{ field.title }}</td>
-                    <td>{{ field.weight }}</td>
-                    <td>{{ field.description }}</td>
-                    <td>{% for score, label in field.scores %}
-                            <div>
-                                {{ score }}: {{ label }}
-                            </div>
-                        {% else %}
-                            <div>No scores defined</div>
-                        {% endfor %}
-                    </td>
-                </tr>
-                {% else %}
-                {% endfor %}
-            {% else %}
-                <tr>no fields assigned yet</tr>
-            {% endfor %}
+            <tr>
+                <td>{{ form.title }}</td>
+                <td>{% if  form.active == 1 %}<i class="icon-check"/>{% else %}<i class="icon-uncheck"/>No{% endif %}</td>
+                <td>{{ form.description }}</td>
+            </tr>
         </tbody>
     </table>
-
+    <table class="table table-condensed table-hover">
+        <caption>List of fields contained in this section</caption>
+        <thead>
+            <tr>
+                <th>Title</th>
+                <th>Description</th>
+                <th>Weight</th>
+                <th>score</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for section in form.sections %}
+            <tr>
+                <td colspan=2>Section {{section.id}}: {{ section.title }}</td>
+                <td colspan=2>{{ section.description }}</td>
+            </tr>
+            {% for field in section.fields %}
+            <tr>
+                <td>{{ field.title }}</td>
+                <td>{{ field.description }}</td>
+                <td>{{ field.weight }}</td>
+                <td>{% for score, label in field.scores %}
+                        <div>
+                            {{ score }}: {{ label }}
+                        </div>
+                    {% else %}
+                        <div>No scores defined</div>
+                    {% endfor %}
+                </td>
+            </tr>
+            {% else %}
+            {% endfor %}
+        {% else %}
+            <tr>no fields assigned yet</tr>
+        {% endfor %}
+        </tbody>
+    </table>
+</div>
 {% endblock %}
