--- a/Resources/views/AuditFormSection/index.html.twig
+++ b/Resources/views/AuditFormSection/index.html.twig
@@ -1,14 +1,14 @@
 {% extends 'WGAuditBundle::base.html.twig' %}
 
 {% block body %}
+<div class="container">
+    <h3>Listing existing Sections:</h3>
 
-    <h2>Listing existing Sections:</h2>
-
-    <table id="audit">
+    <table class="table table-condensed">
         <thead>
             <tr>
                 <th>Title</th>
-                <th>AuditForm</th>
+                <th>Name</th>
                 <th>Description</th>
                 <th>View</th>
                 <th>Edit</th>
@@ -21,9 +21,9 @@
                     <td>{{ section.title }}</td>
                     <td>{{ section.auditform }}</td>
                     <td>{{ section.description }}</td>
-                    <td>[ <a href="{{ path( 'wgauditformsection_view', { 'id': section.id } ) }}">view</a> ]</td>
-                    <td>[ <a href="{{ path( 'wgauditformsection_edit', { 'id': section.id } ) }}">edit</a> ]</td>
-                    <td>[ <a href="{{ path( 'wgauditformsection_delete', { 'id': section.id } ) }}">delete</a> ]</td>
+                    <td><a href="{{ path( 'wgauditformsection_view', { 'id': section.id } ) }}" class="btn btn-mini"><i class="icon-eye-open"/></a></td>
+                    <td><a href="{{ path( 'wgauditformsection_edit', { 'id': section.id } ) }}" class="btn btn-mini"><i class="icon-edit"/></a></td>
+                    <td><a href="{{ path( 'wgauditformsection_delete', { 'id': section.id } ) }}" class="btn btn-mini"><i class="icon-remove"/></a></td>
                 </tr>
             {% else %}
                 <tr>
@@ -32,9 +32,10 @@
             {% endfor %}
                 <tr>
                     <td colspan="6" align="center">
-                        <a href="{{ path( 'wgauditformsection_add' ) }}">Add a new section</a>
+                        <a href="{{ path( 'wgauditformsection_add' ) }}" class="btn btn-small">Add a new section</a>
                     </td>
                 </tr>
         </tbody>
     </table>
+</div>
 {% endblock %}
