--- a/Resources/views/AuditFormSection/view.html.twig
+++ b/Resources/views/AuditFormSection/view.html.twig
@@ -3,48 +3,62 @@
 {% extends 'WGAuditBundle::base.html.twig' %}
 
 {% block body %}
-
+<div class="container">
     <h2>Section: {{ section.title }}</h2>
-    <div>Form: {{ section.auditform }}</div>
-    <div>Description: {{ section.description }}</div>
 
-        <table id="audit">
-            <thead>
-                <tr>
-                    <th>Title</th>
-                    <th>Section</th>
-                    <th>Weight</th>
-                    <th>description</th>
-                    <th>Scores</th>
-                    <th>Fatal</th>
-                </tr>
-            </thead>
-            <tbody>
-            {% for field in section.fields %}
-                <tr>
-                    <td>{{ field.title }}</td>
-                    <td>{{ field.section }}</td>
-                    <td>{{ field.weight }}</td>
-                    <td>{{ field.description }}</td>
-                    <td>{% for score, label in field.scores %}
-                            <div>
-                                {{ score }}: {{ label }}
-                            </div>
-                        {% else %}
-                            <div>No scores defined</div>
-                        {% endfor %}
-                    </td>
-                    <td>{% if field.fatal == 1 %}
-                            <div>Yes</div>
-                        {% else %}
-                            <div>No</div>
-                        {% endif %}
-                    </td>
-                </tr>
-            {% else %}
-                <tr>no fields assigned yet</tr>
-            {% endfor %}
-            </tbody>
-        </table>
+    <table class="table table-condensed">
+        <thead>
+            <tr>
+                <th>Title</th>
+                <th>Description</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>{{ section.auditform }}</td>
+                <td>{{ section.description }}</td>
+            </tr>
+        </tbody>
+    </table>
 
+    <table class="table table-condensed">
+        <caption>List of fields contained in this section</caption>
+        <thead>
+            <tr>
+                <th>Title</th>
+                <th>Section</th>
+                <th>description</th>
+                <th>Weight</th>
+                <th>Scores</th>
+                <th>Fatal</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for field in section.fields %}
+            <tr>
+                <td>{{ field.title }}</td>
+                <td>{{ field.section }}</td>
+                <td>{{ field.description }}</td>
+                <td>{{ field.weight }}</td>
+                <td>{% for score, label in field.scores %}
+                        <div>
+                            {{ score }}: {{ label }}
+                        </div>
+                    {% else %}
+                        <div>No scores defined</div>
+                    {% endfor %}
+                </td>
+                <td>{% if field.fatal == 1 %}
+                        <i class="icon-check"/>
+                    {% else %}
+                        <i class="icon-check-empty"/>
+                    {% endif %}
+                </td>
+            </tr>
+        {% else %}
+            <tr>no fields assigned yet</tr>
+        {% endfor %}
+        </tbody>
+    </table>
+</div>
 {% endblock %}
