--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -4,22 +4,53 @@
     {% block metas %}
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     {% endblock %}
-    <title>{% block title %}Audit Bundle{% endblock %}</title>
+    <title>{% block title %}Written Games Audit Bundle{% endblock %}</title>
     {% block favicon %}{% endblock %}
-    {% block subnavigation %}
-        <a href="{{ path( 'wgaudits' ) }}">view audit list</a>
-        <a href="{{ path( 'wgauditforms' ) }}">view form list</a>
-        <a href="{{ path( 'wgauditformsections' ) }}">view section list</a>
-        <a href="{{ path( 'wgauditformfields' ) }}">view field list</a>
-    {% endblock %}
     {% block stylesheets %}
-        <link href="{{ asset('bundles/wgaudit/css/audit.css') }}" type="text/css" rel="stylesheet" />
+        <link href='http://fonts.googleapis.com/css?family=Orienta' rel='stylesheet' type='text/css' />
+        <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap-combined.min.css" rel="stylesheet">
+        <style type="text/css">
+            body * {
+                font-family: 'Orienta', sans-serif;
+            }
+            body {
+                padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+            }
+        </style>
     {% endblock %}
     {% block javascripts %}
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+            <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+            <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/js/bootstrap.min.js"></script>
     {% endblock %}
   </head>
   <body>
-    {% block body %}Written Games Audit Bundle{% endblock %}
+    {% block subnavigation %}
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <a class="brand" href="#">Audit Bundle</a>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li><a href="{{ path( 'wgaudits' ) }}">view audit list</a></li>
+              <li><a href="{{ path( 'wgauditforms' ) }}">view form list</a></li>
+              <li><a href="{{ path( 'wgauditformsections' ) }}">view section list</a></li>
+              <li><a href="{{ path( 'wgauditformfields' ) }}">view field list</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>
+    {% endblock %}
+    {% block body %}{% endblock %}
   </body>
 </html>
+
+
+
+
+
